--- a/contracts/cw721-metadata-onchain/Cargo.toml
+++ b/contracts/cw721-metadata-onchain/Cargo.toml
@@ -24,9 +24,16 @@ backtraces = ["cosmwasm-std/backtraces"]
 # use library feature to disable all instantiate/execute/query exports
 library = []
 
+[package.metadata.scripts]
+optimize = """docker run --rm -v "$(pwd)":/code \
+  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
+  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
+  cosmwasm/rust-optimizer:0.12.3
+"""
+
 [dependencies]
 cw721 = { version = "0.9.2" }
-cw721-base = { path = "../cw721-base", version = "0.9.2", features = ["library"] }
+cw721-base = { version = "0.9.2", features = ["library"] }
 cosmwasm-std = { version = "0.16.0" }
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
