--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@terra-money/wallet-controller": "^3.8.0",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
