--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,21 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.22",
+    "@types/react": "^17.0.41",
+    "@types/react-dom": "^17.0.14",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "styled-components": "^5.3.3",
+    "typescript": "^4.6.2",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.24",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
