--- a/contracts/cw721-nfc/Cargo.toml
+++ b/contracts/cw721-nfc/Cargo.toml
@@ -43,6 +43,7 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 cosmwasm-std = { version = "0.16.2" }
 cosmwasm-storage = { version = "0.16.0" }
 cw-storage-plus = "0.8.0"
+cw721 = { version = "0.9.2" }
 cw721-base = { version = "0.9.2", features = ["library"] }
 cw2 = "0.8.1"
 schemars = "0.8.3"
