--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,10 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^7.11.0",
+    "eslint-plugin-react": "^7.29.4",
     "react-error-overlay": "6.0.9"
   },
   "scripts": {
@@ -30,7 +34,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src"
+    "lint": "eslint src/*",
+    "lint:fix": "eslint src/* --fix",
+    "lint:quiet": "eslint src/* --quiet"
   },
   "browserslist": {
     "production": [
