--- a/contracts/cw721-nfc/schema/contract_config.json
+++ b/contracts/cw721-nfc/schema/contract_config.json
@@ -1,10 +1,11 @@
 {
   "$schema": "http://json-schema.org/draft-07/schema#",
-  "title": "State",
+  "title": "ContractConfig",
   "type": "object",
   "required": [
     "cw721",
-    "owner"
+    "owner",
+    "paused"
   ],
   "properties": {
     "cw721": {
@@ -12,6 +13,9 @@
     },
     "owner": {
       "$ref": "#/definitions/Addr"
+    },
+    "paused": {
+      "type": "boolean"
     }
   },
   "definitions": {
